--- a/pod.yml
+++ b/pod.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: keycloak
+  name: machine_tokens
   labels:
-    app: keycloak
+    app: machine_tokens
 spec:
   containers:
     - name: keycloak
@@ -35,9 +35,30 @@ spec:
       securityContext:
         capabilities:
           add: ["IPC_LOCK"]
-
+      volumeMounts:
+        - mountPath: /init_vault.sh
+          name: init_vault
+    - name: mis
+      image: localhost/mis:latest
+      command:
+        - /usr/bin/mis
+      args:
+        - --port=8081
+        - --client_id=vault
+        - --client_secret=vault
+        - --username=cosmin
+        - --password=cosmin
+        - --server_url=http://localhost:8080
+      ports:
+        - hostPort: 8080
+          containerPort: 8081
+          
   volumes:
     - name: realm_import
       hostPath:
         path: /home/cosmin/projects/ansible/barclays/realm
         type: Directory
+    - name: init_vault
+      hostPath:
+        path: /home/cosmin/projects/ansible/barclays/init_vault.sh
+        type: File
